# curl_grpc

./: README.md  curl_grpc.c  meson.build
proto/: helloworld.pb-c.c  helloworld.pb-c.h  helloworld.proto
